// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote block saved block HTML shouldn't change 1`] = `
<blockquote
  className="wp-block-ugb-blockquote alignfull ugb-blockquote ugb-blockquote--v2 ugb--background-opacity-2 ugb-blockquote--design-design ugb-content-width ugb-blockquote--small-quote className"
  style={
    Object {
      "--quote-color": "#123456",
      "--ugb-background-color": undefined,
      "backgroundAttachment": undefined,
      "backgroundColor": undefined,
      "backgroundImage": undefined,
      "borderRadius": undefined,
    }
  }
>
  <div
    className="ugb-content-wrapper"
  >
    <div />
    <p
      className="ugb-blockquote__text"
      style={
        Object {
          "color": "#123456",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "text",
          }
        }
      />
    </p>
  </div>
</blockquote>
`;

exports[`Blockquote block saved default block HTML shouldn't change 1`] = `
<blockquote
  className="wp-block-ugb-blockquote ugb-blockquote ugb-blockquote--v2 ugb--background-opacity-5 ugb-blockquote--design-plain"
  style={
    Object {
      "--quote-color": undefined,
      "--ugb-background-color": undefined,
      "backgroundAttachment": undefined,
      "backgroundColor": undefined,
      "backgroundImage": undefined,
      "borderRadius": undefined,
    }
  }
>
  <div
    className="ugb-content-wrapper"
  >
    <div />
    <p
      className="ugb-blockquote__text"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block. Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block.",
          }
        }
      />
    </p>
  </div>
</blockquote>
`;
